--- a/package.json
+++ b/package.json
@@ -8,18 +8,16 @@
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Manelus/proyecto-citas-veterinario.git"
-  },
-  "author": "",
+  "repository": "git+https://github.com/Manelus/proyecto-citas-veterinario.git",
+  "author": "Manelus <94968227+Manelus@users.noreply.github.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Manelus/proyecto-citas-veterinario/issues"
   },
   "homepage": "https://github.com/Manelus/proyecto-citas-veterinario#readme",
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sequelize-cli": "^6.4.1"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -28,11 +26,9 @@
     "express": "^4.17.2",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.16.1",
-    "sequelize-cli": "^6.4.1",
     "uuidv4": "^6.2.12",
     "winston": "^3.5.1"
   }
